added notification system

--- a/ui/popup/popup.html
+++ b/ui/popup/popup.html
@@ -133,6 +133,36 @@
                     <span id="pref-title"><img src="../icons/gear-12.png" /> Preferences</span>
                     <span id="pref-changes">Changes saved automatically</span>
 
+                    <span class="pref-section-title">Notifications</span>
+                    <span class="pref-section-subtitle">Notify me when I visit a site rated:</span>
+                    <label class="switch" id="enable-notif-mixed">
+                        <div class="switch-slider">
+                            <input type="checkbox">
+                            <span class="slider"></span>
+                        </div>
+                        <div class="switch-text">
+                            Mixed factual reporting
+                        </div>
+                    </label>
+                    <label class="switch" id="enable-notif-low">
+                        <div class="switch-slider">
+                            <input type="checkbox">
+                            <span class="slider"></span>
+                        </div>
+                        <div class="switch-text">
+                            Low or very low factual reporting
+                        </div>
+                    </label>
+                    <label class="switch" id="enable-notif-qs">
+                        <div class="switch-slider">
+                            <input type="checkbox">
+                            <span class="slider"></span>
+                        </div>
+                        <div class="switch-text">
+                            Questionable Source or Conspiracy / Pseudoscience
+                        </div>
+                    </label>
+
                     <span class="pref-section-title">Appearance</span>
                     <label class="switch" id="enable-dark">
                         <div class="switch-slider">
